--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "threejs-webpack-boilerplate",
-  "version": "1.0.0",
-  "description": "Boilerplate for Three.js projects using Webpack.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Sean Voisen",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.9.1",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-glsl-loader": "^1.0.1"
-  },
-  "dependencies": {
-    "three": "^0.77.1",
-    "tween.js": "^16.3.4"
-  }
+    "name": "threejs-webpack-boilerplate",
+    "version": "1.0.0",
+    "description": "Boilerplate for Three.js projects using Webpack.",
+    "main": "index.js",
+    "scripts": {
+        "server": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Sean Voisen",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.9.1",
+        "babel-loader": "^6.2.4",
+        "babel-preset-es2015": "^6.9.0",
+        "webpack": "^1.13.1",
+        "webpack-dev-server": "^1.14.1",
+        "webpack-glsl-loader": "^1.0.1"
+    },
+    "dependencies": {
+        "three": "^0.77.1",
+        "tween.js": "^16.3.4"
+    }
 }
